--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -1,6 +1,23 @@
 <!-- <div class="groupName">groupName</div> -->
 
 <div class="singleName mat-elevation-z8">
+
+
+    
+<div *ngIf="isTableOfContent" class="tableOfContent">
+    <div>Table Of Content</div>
+    <div *ngFor="let item of [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,41,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4]">
+        {{item}}
+    </div>
+</div>
+
+<div *ngIf="!isSettings" class="settingsBox">
+    <div>Settings</div>
+    <div *ngFor="let item of [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,41,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4]">
+        {{item}}
+    </div>
+</div>
+
     <button class="menu-left-icon" mat-icon-button>
         <mat-icon>keyboard_arrow_right</mat-icon>
     </button>
@@ -62,19 +79,6 @@
 </div>
 
 
-<div *ngIf="isTableOfContent" class="tableOfContent">
-    <div>Table Of Content</div>
-    <div *ngFor="let item of [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,41,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4]">
-        {{item}}
-    </div>
-</div>
-
-<div *ngIf="!isTableOfContent" class="settingsBox">
-    <div>Table Of Content</div>
-    <div *ngFor="let item of [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,41,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4]">
-        {{item}}
-    </div>
-</div>
 
 
 <div *ngIf="!mainMenu" class="corner_bar_menu">
@@ -116,7 +120,7 @@
     <button matTooltip="info" matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
         <mat-icon class="full-icon">help</mat-icon>
     </button>
-    <button matTooltip="mobile app" mat-icon-button color="red">
+    <button matTooltip="mobile app"  matTooltipPosition="above" mat-icon-button color="red">
         <mat-icon class="full-icon">phone_iphone</mat-icon>
     </button>
     <button *ngIf="true" matTooltip="stats" matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
@@ -134,7 +138,7 @@
     <button *ngIf="true" mat-icon-button matTooltip="names box" matTooltipPosition="above">
         <mat-icon class="full-icon">bento</mat-icon>
     </button>
-    <button *ngIf="true" mat-icon-button matTooltip="settings" matTooltipPosition="above">
+    <button  (click)="isSettings = !isSettings"  *ngIf="true" mat-icon-button matTooltip="settings" matTooltipPosition="above">
         <mat-icon class="full-icon">settings</mat-icon>
     </button>
     <button *ngIf="true" mat-icon-button matTooltip="help" matTooltipPosition="above">
@@ -148,8 +152,7 @@
         aria-label="aria">
         <mat-icon class="full-icon">keyboard_arrow_down</mat-icon>
     </button>
-    <button *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
-        style="border-radius: 11px; border: 2px solid grey;outline: none;line-height: 30px;" aria-label="aria">
+    <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button aria-label="aria">
         GO
     </button>
 </div>
