--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -113,9 +113,6 @@
     flex-direction: row;
 }
 
-::ng-deep .mat-tooltip {
-    font-size: 24px;
-}
 
 .full-icon:hover {
     transform: scale(2.1);
@@ -125,6 +122,7 @@
     color: grey;
     font-size: 20px;
     transition: all 0.1s ease-in-out;
+
 }
 
 .menu-left-icon {
@@ -142,21 +140,33 @@
 }
 
 .tableOfContent {
-    width: 300px;
-    height: 97%;
+    position: absolute;
+    left: -311px;
+    top: -15px;
+    width: 260px;
+    height:714px;
     margin: 10px;
     border: solid 3px darkblue;
+    overflow: hidden;
     @include BoxShadow(6);
 }
 
 .settingsBox {
-    float:right;
-    width: 300px;
-    height: 85%;
+    position: absolute;
+    right: -316px;
+    top: -14px;
+    width: 260px;
+    height:714px;
     margin: 10px;
     border: solid 3px darkblue;
+    overflow: hidden;
     @include BoxShadow(6);
 }
+
+
+
+
+
 
 .voteIcons {
     position: absolute;
@@ -195,6 +205,16 @@
     height: 200px;
 }
 
+::ng-deep .mat-tooltip {
+    font-size: 24px;
+    position: absolute;
+    left: -85px;
+    top: 40px;
+    width: 150px;
+    text-align: center;
+}
+
+
 $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff;
 @for $i from 1 through 4 {
     .voteIconButton:nth-child(#{$i}) {
@@ -218,6 +238,17 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff;
         background: white;
     }
 }
+
+
+.goButton{
+    border-radius: 11px;
+    border: 5px solid black;
+    outline: none;
+    line-height: 30px;
+    color: white;
+    background-color: red;
+}
+
 // theme
 
 // $postItHeaderColorsLength: length($postItHeaderColors2);
