--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -1,22 +1,18 @@
-<!-- <div class="groupName">groupName</div> -->
+<div class="mainContainerPresent mat-elevation-z8">
 
-<div class="singleName mat-elevation-z8">
-
-
-    
-<div *ngIf="isTableOfContent" class="tableOfContent">
-    <div>Table Of Content</div>
-    <div *ngFor="let item of [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,41,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4]">
-        {{item}}
+    <div *ngIf="isTableOfContent" class="tableOfContent">
+        <div>Table Of Content</div>
+        <div *ngFor="let item of [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,41,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4]">
+            {{item}}
+        </div>
     </div>
-</div>
 
-<div *ngIf="!isSettings" class="settingsBox">
-    <div>Settings</div>
-    <div *ngFor="let item of [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,41,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4]">
-        {{item}}
+    <div *ngIf="isSettings" class="settingsBox">
+        <div>Settings</div>
+        <div *ngFor="let item of [1,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,41,2,3,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4,4]">
+            {{item}}
+        </div>
     </div>
-</div>
 
     <button class="menu-left-icon" mat-icon-button>
         <mat-icon>keyboard_arrow_right</mat-icon>
@@ -26,55 +22,92 @@
         <mat-icon>keyboard_arrow_left</mat-icon>
     </button>
 
-    <!-- <button class="GO" style="" mat-icon-button matTooltip="home" matTooltipPosition="above">
-        GO
-    </button> -->
 
-    <div class="nameContainer">
-        <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">COVID-9 mRNA vaccine</div>
-        <div [style.font-family]="font2" [style.font-size]="(font2==='Gacor')?'117px':'190px'" class="item2">Comirnaty
+
+    <div class="singleNameSlide">
+
+        <div class="nameContainer">
+            <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">COVID-9 mRNA vaccine</div>
+            <div [style.font-family]="font2" [style.font-size]="(font2==='Gacor')?'117px':'190px'" class="item2">
+                Comirnaty
+            </div>
+            <div [style.font-family]="font3" [style.font-size]="'30px'" class="item3">HYBERYS</div>
+            <div [style.font-family]="font4" [style.font-size]="'35px'" class="item4">RNA (mRNA) a protein from
+                SARS-CoV-2
+            </div>
         </div>
-        <div [style.font-family]="font3" [style.font-size]="'30px'" class="item3">HYBERYS</div>
-        <div [style.font-family]="font4" [style.font-size]="'35px'" class="item4">RNA (mRNA) a protein from SARS-CoV-2
+
+        <div class="voteIcons">
+
+            <button class="voteIconButton" mat-icon-button matTooltip="Positive" matTooltipPosition="above">
+                <mat-icon>sentiment_very_satisfied</mat-icon>
+            </button>
+
+            <button class="voteIconButton" mat-icon-button matTooltip="Neutral" matTooltipPosition="above">
+                <mat-icon>sentiment_neutral</mat-icon>
+            </button>
+
+            <button class="voteIconButton" mat-icon-button matTooltip="Negative" matTooltipPosition="above">
+                <mat-icon>sentiment_very_dissatisfied</mat-icon>
+            </button>
+
+            <button class="voteIconButton" mat-icon-button matTooltip="Re-Craft" matTooltipPosition="above">
+                <mat-icon>sync</mat-icon>
+            </button>
+
         </div>
+
     </div>
 
-    <div class="voteIcons">
+    <!-- <div class="imagePresentar" [style.background]="slideBackground"></div> -->
 
-        <button class="voteIconButton" mat-icon-button matTooltip="Positive" matTooltipPosition="above">
-            <mat-icon>sentiment_very_satisfied</mat-icon>
-        </button>
-
-        <button class="voteIconButton" mat-icon-button matTooltip="Neutral" matTooltipPosition="above">
-            <mat-icon>sentiment_neutral</mat-icon>
-        </button>
-
-        <button class="voteIconButton" mat-icon-button matTooltip="Negative" matTooltipPosition="above">
-            <mat-icon>sentiment_very_dissatisfied</mat-icon>
-        </button>
-
-        <button class="voteIconButton" mat-icon-button matTooltip="Re-Craft" matTooltipPosition="above">
-            <mat-icon>sync</mat-icon>
-        </button>
-
-    </div>
+    <!-- <div class="groupName" >groupName</div> -->
 
     <div *ngIf="false" class="voteOverview">
 
-        <button class="voteOverviewBox"  matTooltip="Positive" matTooltipPosition="above">
-           
+        <button class="voteOverviewBox" matTooltip="Positive" matTooltipPosition="above">
+
         </button>
-        <button class="voteOverviewBox"  matTooltip="Positive" matTooltipPosition="above">
-           
+        <button class="voteOverviewBox" matTooltip="Positive" matTooltipPosition="above">
+
         </button>
-        <button class="voteOverviewBox"  matTooltip="Positive" matTooltipPosition="above">
-           
+        <button class="voteOverviewBox" matTooltip="Positive" matTooltipPosition="above">
+
         </button>
-        <button class="voteOverviewBox"  matTooltip="Positive" matTooltipPosition="above">
-           
+        <button class="voteOverviewBox" matTooltip="Positive" matTooltipPosition="above">
+
         </button>
 
     </div>
+
+    <div class="smartRadialButton">
+    
+        
+        <button class="GO" mat-icon-button >
+            G
+        </button>
+        
+
+
+        <button class="G4 GG" mat-icon-button >
+            N
+        </button>
+
+        <button class="G2 GG" mat-icon-button>
+            C
+        </button>
+
+        <button class="G3 GG" mat-icon-button >
+            P
+        </button>
+
+        <button class="G1 GG" mat-icon-button >
+            T
+        </button>
+
+    </div>
+
+
 
 </div>
 
@@ -86,10 +119,10 @@
         aria-label="aria">
         <mat-icon class="full-icon">note_add</mat-icon>
     </button>
-    <button *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
+    <!-- <button *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
         style="border-radius: 50%; border: 2px solid grey;outline: none;" aria-label="aria">
         GO
-    </button>
+    </button> -->
     <!-- <button mat-icon-button aria-label="Proprietary" style="width: 200px;">
       Proprietary & Confidential
     </button> -->
@@ -97,6 +130,10 @@
         aria-label="aria">
         <mat-icon class="full-icon">menu</mat-icon>
     </button>
+    <!-- <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
+        aria-label="aria">
+        GO
+    </button> -->
 </div>
 
 <div *ngIf="mainMenu" class="corner_bar_menu">
@@ -107,7 +144,8 @@
         aria-label="aria">
         <mat-icon class="full-icon">aspect_ratio</mat-icon>
     </button>
-    <button (click)="isTableOfContent = !isTableOfContent" matTooltip="search" matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
+    <button (click)="isTableOfContent = !isTableOfContent" matTooltip="search" matTooltipPosition="above"
+        mat-icon-button color="warn" aria-label="aria">
         <mat-icon class="full-icon">search</mat-icon>
     </button>
     <button *ngIf="!true" mat-icon-button matTooltip="slide comments" matTooltipPosition="above">
@@ -120,7 +158,7 @@
     <button matTooltip="info" matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
         <mat-icon class="full-icon">help</mat-icon>
     </button>
-    <button matTooltip="mobile app"  matTooltipPosition="above" mat-icon-button color="red">
+    <button matTooltip="mobile app" matTooltipPosition="above" mat-icon-button color="red">
         <mat-icon class="full-icon">phone_iphone</mat-icon>
     </button>
     <button *ngIf="true" matTooltip="stats" matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
@@ -138,7 +176,8 @@
     <button *ngIf="true" mat-icon-button matTooltip="names box" matTooltipPosition="above">
         <mat-icon class="full-icon">bento</mat-icon>
     </button>
-    <button  (click)="isSettings = !isSettings"  *ngIf="true" mat-icon-button matTooltip="settings" matTooltipPosition="above">
+    <button (click)="isSettings = !isSettings" *ngIf="true" mat-icon-button matTooltip="settings"
+        matTooltipPosition="above">
         <mat-icon class="full-icon">settings</mat-icon>
     </button>
     <button *ngIf="true" mat-icon-button matTooltip="help" matTooltipPosition="above">
@@ -152,7 +191,8 @@
         aria-label="aria">
         <mat-icon class="full-icon">keyboard_arrow_down</mat-icon>
     </button>
-    <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button aria-label="aria">
+    <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above" mat-icon-button
+        aria-label="aria">
         GO
     </button>
 </div>
