--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -30,7 +30,7 @@
     }
 }
 
-.singleName {
+.mainContainerPresent {
     background-color: white;
     border: solid 5px #2b3080;
     width: 948px;
@@ -55,17 +55,6 @@
         height: 575px;
     }
 
-    .GO {
-        @include BoxShadow(4);
-        width: 70px;
-        height: 70px;
-        border: 5px solid darkblue;
-        position: absolute;
-        right: -68px;
-        top: -53px;
-        outline: none;
-        line-height: 30px;
-    }
 
     .item1 {
         // font-size: 30px;
@@ -92,12 +81,27 @@
     height: 714px;
     margin: 0;
     position: absolute;
-    top: 50%;
+    top: 53%;
     left: 50%;
     -ms-transform: translate(-50%, -53%);
     transform: translate(-50%, -53%);
     border-radius: 3px;
-    background-image: url("http://bipresents.com/nw2/nw_slides/Test_WELL_PLATFORM/thumbnails/014.jpg");
+    // background-image: url("http://bipresents.com/nw2/nw_slides/Test_WELL_PLATFORM/thumbnails/014.jpg");
+    @include BoxShadow(6);
+}
+.imagePresentar {
+    background-color: lightcoral;
+    border: solid 5px #2b3080;
+    width: 948px;
+    height: 714px;
+    margin: 0;
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    -ms-transform: translate(-50%, -53%);
+    transform: translate(-50%, -53%);
+    border-radius: 3px;
+    // background-image: url("http://bipresents.com/nw2/nw_slides/Test_WELL_PLATFORM/thumbnails/014.jpg");
     @include BoxShadow(6);
 }
 
@@ -113,16 +117,14 @@
     flex-direction: row;
 }
 
-
 .full-icon:hover {
-    transform: scale(2.1);
+    transform: scale(2);
     color: darkblue;
 }
 .full-icon {
     color: grey;
     font-size: 20px;
     transition: all 0.1s ease-in-out;
-
 }
 
 .menu-left-icon {
@@ -144,7 +146,7 @@
     left: -311px;
     top: -15px;
     width: 260px;
-    height:714px;
+    height: 714px;
     margin: 10px;
     border: solid 3px darkblue;
     overflow: hidden;
@@ -156,21 +158,16 @@
     right: -316px;
     top: -14px;
     width: 260px;
-    height:714px;
+    height: 714px;
     margin: 10px;
     border: solid 3px darkblue;
     overflow: hidden;
     @include BoxShadow(6);
 }
 
-
-
-
-
-
 .voteIcons {
     position: absolute;
-    left: 147px;
+    left: 134px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -214,15 +211,97 @@
     text-align: center;
 }
 
+.GO:hover {
+    transform: scale(1.2)
+}
 
-$voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff;
-@for $i from 1 through 4 {
+.GO {
+    @include BoxShadow(4);
+    width: 70px;
+    height: 70px;
+    border: 5px solid darkblue;
+    position: absolute;
+    right: 427px;
+    bottom: -35px;
+    outline: none;
+    font-size: 48px;
+    line-height: 30px;
+    background-color: red;
+    color: white;
+    font-family: auto;
+}
+.G1 {
+    @include BoxShadow(6);
+    width: 35px;
+    height: 35px;
+    border: 3px solid darkblue;
+    position: absolute;
+    right: 511px;
+    bottom: -19px;
+    outline: none;
+    font-size: 23px;
+    line-height: 10px;
+    background-color: white;
+    color: darkblue;
+    font-family: auto;
+}
+.G2 {
+    @include BoxShadow(6);
+    width: 35px;
+    height: 35px;
+    border: 3px solid darkblue;
+    position: absolute;
+    right: 410px;
+    bottom: -69px;
+    outline: none;
+    font-size: 23px;
+    line-height: 10px;
+    background-color: white;
+    color: darkblue;
+    font-family: auto;
+}
+.G3 {
+    @include BoxShadow(6);
+    width: 35px;
+    height: 35px;
+    border: 3px solid darkblue;
+    position: absolute;
+    right: 480px;
+    bottom: -69px;
+    outline: none;
+    font-size: 23px;
+    line-height: 10px;
+    background-color: white;
+    color: darkblue;
+    font-family: auto;
+}
+.G4 {
+    @include BoxShadow(6);
+    width: 35px;
+    height: 35px;
+    border: 3px solid darkblue;
+    position: absolute;
+    right: 382px;
+    bottom: -19px;
+    outline: none;
+    font-size: 23px;
+    line-height: 10px;
+    background-color: white;
+    color: darkblue;
+    font-family: auto;
+}
+
+$voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
+@for $i from 1 through 5 {
     .voteIconButton:nth-child(#{$i}) {
         // color: nth($voteIconsColor, $i);
         animation: fadeIn 0.2s ease-in-out backwards;
         animation-iteration-count: 1;
         animation-delay: $i * 0.15 + s;
+        @include BoxShadow(6);
     }
+
+    
     .voteOverviewBox:nth-child(#{$i}) {
         // color: nth($voteIconsColor, $i);
         animation: fadeIn 0.2s ease-in-out backwards;
@@ -234,13 +313,26 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff;
         // transform:;
         position: relative;
         top: -2px;
-        transform: scale(2.1) rotate(5deg);
+        transform: scale(2);
+        background: white;
+    }
+
+    .GG:nth-child(#{$i}) {
+        // color: nth($voteIconsColor, $i);
+        animation: fadeIn 0.2s ease-in-out backwards;
+        animation-iteration-count: 1;
+        animation-delay: $i * 0.15 + s;
+        text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+        box-shadow:inset inset 0px 0px 5px #c1c1c1;
+    }
+    
+    .GG:hover:nth-child(#{$i}) {
+        transform: scale(1.2);
         background: white;
     }
 }
 
-
-.goButton{
+.goButton {
     border-radius: 11px;
     border: 5px solid black;
     outline: none;
