--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -52,9 +52,8 @@
         flex-direction: column;
         justify-content: space-around;
         width: 948px;
-        height: 575px;
+        height: 525px;
     }
-
 
     .item1 {
         // font-size: 30px;
@@ -167,7 +166,7 @@
 
 .voteIcons {
     position: absolute;
-    left: 134px;
+    left: 130px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -180,8 +179,8 @@
 .voteIconButton {
     color: darkblue;
     outline: none;
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 30px;
     line-height: 20px;
 }
 
@@ -212,7 +211,7 @@
 }
 
 .GO:hover {
-    transform: scale(1.2)
+    transform: scale(1.2);
 }
 
 .GO {
@@ -221,14 +220,15 @@
     height: 70px;
     border: 5px solid darkblue;
     position: absolute;
-    right: 427px;
+    right: 434px;
     bottom: -35px;
     outline: none;
     font-size: 48px;
     line-height: 30px;
-    background-color: red;
+    background-color: darkblue;
     color: white;
     font-family: auto;
+    z-index: 1;
 }
 .G1 {
     @include BoxShadow(6);
@@ -251,7 +251,7 @@
     height: 35px;
     border: 3px solid darkblue;
     position: absolute;
-    right: 410px;
+    right: 401px;
     bottom: -69px;
     outline: none;
     font-size: 23px;
@@ -281,7 +281,7 @@
     height: 35px;
     border: 3px solid darkblue;
     position: absolute;
-    right: 382px;
+    right: 374px;
     bottom: -19px;
     outline: none;
     font-size: 23px;
@@ -301,20 +301,20 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         @include BoxShadow(6);
     }
 
-    
-    .voteOverviewBox:nth-child(#{$i}) {
-        // color: nth($voteIconsColor, $i);
-        animation: fadeIn 0.2s ease-in-out backwards;
-        animation-iteration-count: 1;
-        animation-delay: $i * 0.15 + s;
-    }
     .voteIconButton:hover:nth-child(#{$i}) {
         color: nth($voteIconsColor, $i);
         // transform:;
         position: relative;
         top: -2px;
-        transform: scale(2);
+        transform: scale(1.2);
         background: white;
+    }
+
+    .voteOverviewBox:nth-child(#{$i}) {
+        // color: nth($voteIconsColor, $i);
+        animation: fadeIn 0.2s ease-in-out backwards;
+        animation-iteration-count: 1;
+        animation-delay: $i * 0.15 + s;
     }
 
     .GG:nth-child(#{$i}) {
@@ -322,10 +322,16 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         animation: fadeIn 0.2s ease-in-out backwards;
         animation-iteration-count: 1;
         animation-delay: $i * 0.15 + s;
-        text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
-        box-shadow:inset inset 0px 0px 5px #c1c1c1;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
-    
+
+    .GGOut:nth-child(#{$i}) {
+        animation: fadeOut 0.2s ease-in-out backwards;
+        animation-iteration-count: 1;
+        animation-delay: $i * 0.15 + s;
+    }
+
     .GG:hover:nth-child(#{$i}) {
         transform: scale(1.2);
         background: white;
@@ -341,6 +347,35 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     background-color: red;
 }
 
+.newNamesBox {
+    overflow: auto;
+    resize: vertical;
+    width: 460px;
+    height: 100px;
+    position: absolute;
+    left: 0px;
+    bottom: 18px;
+    font-size: 50px;
+}
+
+.commentsBox {
+    overflow: auto;
+    resize: vertical;
+    width: 460px;
+    height: 100px;
+    position: absolute;
+    right: 0px;
+    bottom: 18px;
+    font-size: 50px;
+}
+
+.textareas {
+    flex-direction: row;
+    box-sizing: border-box;
+    display: flex;
+    position: relative;
+    bottom: -91px;
+}
 // theme
 
 // $postItHeaderColorsLength: length($postItHeaderColors2);
