name and comment boxes add it

--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -71,7 +71,7 @@
 
         <!-- <div class="groupName" >groupName</div> -->
 
-        <div *ngIf="false" class="voteOverview">
+        <div *ngIf="!false" class="voteOverview">
 
             <button class="voteOverviewBox" matTooltip="Positive" matTooltipPosition="above">
 
