--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -210,7 +210,25 @@
     text-align: center;
 }
 
+.fisheye {
+    position: absolute;
+    right: 485px;
+    bottom: 16px;
+    outline: none;
+    font-size: 81px;
+    display: inline;
+    color: red;
+    z-index: 1;
+    transform-origin: 50px 50px;
+    // transition: all 30s ease-in-out;
+    animation: heartBeat 10000ms ease-in-out 100ms infinite;
+    // fadeOut  10000ms ease-in-out 100ms infinite;
+
+
+}
+
 .GO:hover {
+    transition: all 300ms ease-in-out;
     transform: scale(1.2);
 }
 
@@ -228,7 +246,9 @@
     background-color: darkblue;
     color: white;
     font-family: auto;
-    z-index: 1;
+    z-index: 2;
+    transition: all 1s ease-in-out;
+    animation: fadeIn 3000ms ease-in-out 100ms 1
 }
 .G1 {
     @include BoxShadow(6);
@@ -356,6 +376,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     left: 0px;
     bottom: 18px;
     font-size: 50px;
+    text-align: center; 
 }
 
 .commentsBox {
