--- a/src/app/nw3/nw3.component.html
+++ b/src/app/nw3/nw3.component.html
@@ -36,10 +36,10 @@
 
             <div class="nameContainer">
                 <div [style.font-family]="font1" [style.font-size]="'30px'" class="item1">COVID-9 mRNA vaccine</div>
-                <div [style.font-family]="font2" [style.font-size]="(font2==='Gacor')?'117px':'190px'" class="item2">
-                    Comirnaty
+                <div [style.font-family]="font2" [style.font-size]="(font2==='Gacor')?'117px':'190px'" class="item2" [innerHTML]="'Comirnaty'">
+                    
                 </div>
-                <div [style.font-family]="font3" [style.font-size]="'30px'" class="item3">HYBERYS</div>
+                <div [style.font-family]="font3" [style.font-size]="'30px'" class="item3">comir-nati</div>
                 <div [style.font-family]="font4" [style.font-size]="'35px'" class="item4">RNA (mRNA) a protein from
                     SARS-CoV-2
                 </div>
@@ -47,19 +47,19 @@
 
             <div class="voteIcons">
 
-                <button class="voteIconButton" mat-icon-button matTooltip="Positive" matTooltipPosition="above">
+                <button class="voteIconButton" mat-icon-button matTooltip="" matTooltipPosition="above">
                     <mat-icon>sentiment_very_satisfied</mat-icon>
                 </button>
 
-                <button class="voteIconButton" mat-icon-button matTooltip="Neutral" matTooltipPosition="above">
+                <button class="voteIconButton" mat-icon-button matTooltip="" matTooltipPosition="above">
                     <mat-icon>sentiment_neutral</mat-icon>
                 </button>
 
-                <button class="voteIconButton" mat-icon-button matTooltip="Negative" matTooltipPosition="above">
+                <button class="voteIconButton" mat-icon-button matTooltip="" matTooltipPosition="above">
                     <mat-icon>sentiment_very_dissatisfied</mat-icon>
                 </button>
 
-                <button class="voteIconButton" mat-icon-button matTooltip="Re-Craft" matTooltipPosition="above">
+                <button class="voteIconButton" mat-icon-button matTooltip="" matTooltipPosition="above">
                     <mat-icon>sync</mat-icon>
                 </button>
 
@@ -71,7 +71,7 @@
 
         <!-- <div class="groupName" >groupName</div> -->
 
-        <div *ngIf="!false" class="voteOverview">
+        <div *ngIf="false" class="voteOverview">
 
             <button class="voteOverviewBox" matTooltip="Positive" matTooltipPosition="above">
 
@@ -88,13 +88,15 @@
 
         </div>
 
+
+        <!-- BI BRAND GO BUTTON -->
         <div class="smartRadialButton">
 
 
-            <button class="GO" mat-icon-button (mouseenter)="showRadiaLMenu(true)">
+            <button [ngClass]="(isGoVoteOn)?'GO':'GO_Off'" mat-icon-button (click)="goVote()" >
                 BI
             </button>
-            <mat-icon class="fisheye">panorama_fish_eye</mat-icon>
+            <!-- <mat-icon class="fisheye">panorama_fish_eye</mat-icon> -->
 
 
 <!-- 
@@ -116,14 +118,14 @@
 
 
             <div class="textareas">
-                <mat-form-field fxFlex="50" id="newNameFormField" [color]="newNameColor" appearance="">
-                    <!-- <mat-label>New Names</mat-label> -->
+                <mat-form-field fxFlex="50" id="newNameFormField"  appearance="">
                     <input #txtNewName matInput placeholder="" style="font-size: 30px;text-align: center;">
                 </mat-form-field>
-                <mat-form-field fxFlex="50" id="commentsFormField" [color]="commentsColor" appearance="">
-                    <!-- <mat-label>Comments</mat-label> -->
+                <mat-label class="newNamesLabel" style="color: darkblue;">new names</mat-label>
+                <mat-form-field fxFlex="50" id="commentsFormField"  appearance="">
                     <input #txtComments matInput placeholder="" style="font-size: 30px;text-align: center;">
                 </mat-form-field>
+                <mat-label class="commentsLabel" style="color: darkblue;">comments</mat-label>
             </div>
         </div>
 
@@ -157,65 +159,65 @@
     </div>
 
     <div *ngIf="mainMenu" class="corner_bar_menu">
-        <button mat-icon-button matTooltip="home" matTooltipPosition="above">
+        <button mat-icon-button matTooltip="home" matTooltipPosition="left">
             <mat-icon class="full-icon">home</mat-icon>
         </button>
-        <button (click)="openFullscreen()" matTooltip="full-screen" matTooltipPosition="above" mat-icon-button
+        <button (click)="openFullscreen()" matTooltip="full-screen" matTooltipPosition="left" mat-icon-button
             color="warn" aria-label="aria">
             <mat-icon class="full-icon">aspect_ratio</mat-icon>
         </button>
-        <button (click)="isTableOfContent = !isTableOfContent" matTooltip="search" matTooltipPosition="above"
+        <button (click)="isTableOfContent = !isTableOfContent" matTooltip="search" matTooltipPosition="left"
             mat-icon-button color="warn" aria-label="aria">
             <mat-icon class="full-icon">search</mat-icon>
         </button>
-        <button *ngIf="!true" mat-icon-button matTooltip="slide comments" matTooltipPosition="above">
+        <button *ngIf="!true" mat-icon-button matTooltip="slide comments" matTooltipPosition="left">
             <mat-icon class="full-icon">comment</mat-icon>
         </button>
-        <button *ngIf="!false" matTooltip="qr code" matTooltipPosition="above" mat-icon-button color="warn"
+        <button *ngIf="!false" matTooltip="qr code" matTooltipPosition="left" mat-icon-button color="warn"
             aria-label="aria">
             <mat-icon class="full-icon">qr_code</mat-icon>
         </button>
-        <button matTooltip="info" matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
+        <button matTooltip="info" matTooltipPosition="left" mat-icon-button color="warn" aria-label="aria">
             <mat-icon class="full-icon">help</mat-icon>
         </button>
-        <button matTooltip="mobile app" matTooltipPosition="above" mat-icon-button color="red">
+        <button matTooltip="mobile app" matTooltipPosition="left" mat-icon-button color="red">
             <mat-icon class="full-icon">phone_iphone</mat-icon>
         </button>
-        <button *ngIf="true" matTooltip="stats" matTooltipPosition="above" mat-icon-button color="warn"
+        <button *ngIf="true" matTooltip="stats" matTooltipPosition="left" mat-icon-button color="warn"
             aria-label="aria">
             <mat-icon class="full-icon">bar_chart</mat-icon>
         </button>
-        <button *ngIf="true" matTooltip="font size" matTooltipPosition="above" mat-icon-button color="warn"
+        <button *ngIf="true" matTooltip="font size" matTooltipPosition="left" mat-icon-button color="warn"
             aria-label="aria">
             <mat-icon class="full-icon">font_download</mat-icon>
             <mat-slider #slider *ngIf="false" class="slider-font-size" thumbLabel tickInterval="2" min="20" max="38"
                 [value]="28"></mat-slider>
         </button>
-        <button (click)="fontTheme()" *ngIf="true" mat-icon-button matTooltip="toggle theme" matTooltipPosition="above">
+        <button (click)="fontTheme()" *ngIf="true" mat-icon-button matTooltip="toggle theme" matTooltipPosition="left">
             <mat-icon class="full-icon">casino</mat-icon>
         </button>
-        <button *ngIf="true" mat-icon-button matTooltip="names box" matTooltipPosition="above">
+        <button *ngIf="true" mat-icon-button matTooltip="names box" matTooltipPosition="left">
             <mat-icon class="full-icon">bento</mat-icon>
         </button>
         <button (click)="isSettings = !isSettings" *ngIf="true" mat-icon-button matTooltip="settings"
-            matTooltipPosition="above">
+            matTooltipPosition="left">
             <mat-icon class="full-icon">settings</mat-icon>
         </button>
-        <button *ngIf="true" mat-icon-button matTooltip="help" matTooltipPosition="above">
+        <button *ngIf="true" mat-icon-button matTooltip="help" matTooltipPosition="left">
             <mat-icon class="full-icon">help</mat-icon>
         </button>
         <button disabled mat-icon-button aria-label="page"
-            style="width: 100px;font-size: 23px;color: grey !important;cursor: pointer;">
+            style="font-size: 23px;color: grey !important;cursor: pointer;">
             {{'1/60'}}
         </button>
-        <button (click)="mainMenu = false" matTooltip="hide menu" matTooltipPosition="above" mat-icon-button
+        <button (click)="mainMenu = false" matTooltip="hide menu" matTooltipPosition="left" mat-icon-button
             color="warn" aria-label="aria">
             <mat-icon class="full-icon">keyboard_arrow_down</mat-icon>
         </button>
-        <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="above"
+        <!-- <button class="goButton" *ngIf="true" mat-icon-button matTooltip="vote" matTooltipPosition="left"
             mat-icon-button aria-label="aria">
             GO
-        </button>
+        </button> -->
     </div>
 
 </div>
