--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -106,14 +106,14 @@
 
 .corner_bar_menu {
     position: absolute;
-    right: 60px;
+    right: 20px;
     bottom: 30px;
     outline: none;
     z-index: 9999;
     background: white;
     border-radius: 5px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .full-icon:hover {
@@ -148,7 +148,9 @@
     height: 714px;
     margin: 10px;
     border: solid 3px darkblue;
-    overflow: hidden;
+    overflow: hidden;    
+    animation: bounceInLeft 1000ms ease-out 1ms forwards 1, fadeIn 1000ms ease-out 1ms forwards 1;
+    transform: translate(0px, -900px);
     @include BoxShadow(6);
 }
 
@@ -161,6 +163,9 @@
     margin: 10px;
     border: solid 3px darkblue;
     overflow: hidden;
+    display: none;
+    animation: fadeIn 1000ms ease-out 1ms forwards 1;
+    // transform: translate(0px, 100px);
     @include BoxShadow(6);
 }
 
@@ -201,16 +206,8 @@
     height: 200px;
 }
 
-::ng-deep .mat-tooltip {
-    font-size: 24px;
-    position: absolute;
-    left: -85px;
-    top: 40px;
-    width: 150px;
-    text-align: center;
-}
-
 .fisheye {
+    //  DEPRECATED
     position: absolute;
     right: 485px;
     bottom: 16px;
@@ -220,19 +217,35 @@
     color: red;
     z-index: 1;
     transform-origin: 50px 50px;
-    // transition: all 30s ease-in-out;
-    animation: heartBeat 10000ms ease-in-out 100ms infinite;
-    // fadeOut  10000ms ease-in-out 100ms infinite;
-
-
+    transition: all 30s ease-in-out;
+    animation: heartBeat 10000ms ease-in-out 100ms infinite, fadeOut 10000ms ease-in-out 100ms infinite;
 }
 
-.GO:hover {
-    transition: all 300ms ease-in-out;
+
+.GO {
+    @include BoxShadow(4);
+    width: 70px;
+    height: 70px;
+    border: 5px solid darkblue;
+    position: absolute;
+    right: 434px;
+    bottom: -35px;
+    outline: none;
+    font-size: 40px;
+    line-height: 30px;
+    background-color: white;
+    color: darkblue;
+    font-family: auto;
+    z-index: 2;
+    animation: heartBeat 10000ms ease-in-out 1ms infinite;
+}
+
+.GO_Off:hover {   
     transform: scale(1.2);
 }
 
-.GO {
+
+.GO_Off {
     @include BoxShadow(4);
     width: 70px;
     height: 70px;
@@ -247,8 +260,8 @@
     color: white;
     font-family: auto;
     z-index: 2;
-    transition: all 1s ease-in-out;
-    animation: fadeIn 3000ms ease-in-out 100ms 1
+    transition: all 100ms ease-in-out;
+    // animation: heartBeat 10000ms ease-in-out 20ms infinite;
 }
 .G1 {
     @include BoxShadow(6);
@@ -323,7 +336,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
 
     .voteIconButton:hover:nth-child(#{$i}) {
         color: nth($voteIconsColor, $i);
-        // transform:;
+        transition: all 2ms ease-in-out;
         position: relative;
         top: -2px;
         transform: scale(1.2);
@@ -376,7 +389,7 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     left: 0px;
     bottom: 18px;
     font-size: 50px;
-    text-align: center; 
+    text-align: center;
 }
 
 .commentsBox {
@@ -395,8 +408,32 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     box-sizing: border-box;
     display: flex;
     position: relative;
-    bottom: -91px;
+    bottom: -70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .commentsLabel {
+        position: absolute;
+        bottom: 0px;
+        right: 210px;
+    }
+    .newNamesLabel {
+        position: absolute;
+        bottom: 0px;
+        left: 210px;
+    }
 }
+
+::ng-deep .mat-tooltip {
+    font-size: 24px;
+    position: absolute;
+    left: -2px;
+    top: -30px;
+    width: 150px;
+    text-align: center;
+}
+
+
 // theme
 
 // $postItHeaderColorsLength: length($postItHeaderColors2);
