--- a/src/app/nw3/nw3.component.scss
+++ b/src/app/nw3/nw3.component.scss
@@ -59,17 +59,25 @@
         // font-size: 30px;
         margin-bottom: 161px;
         margin-top: -15px;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
-    .item2 {
+    .testName {
         // font-size: 140px;
         margin-top: -138px;
         color: darkblue;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
-    .item3 {
+    .pronounciation {
         // font-size: 30px;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
-    .item4 {
+    .rationale {
         // font-size: 35px;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
 }
 
@@ -106,7 +114,7 @@
 
 .corner_bar_menu {
     position: absolute;
-    right: 20px;
+    right: 30px;
     bottom: 30px;
     outline: none;
     z-index: 9999;
@@ -114,6 +122,7 @@
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    
 }
 
 .full-icon:hover {
@@ -124,6 +133,8 @@
     color: grey;
     font-size: 20px;
     transition: all 0.1s ease-in-out;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
 }
 
 .menu-left-icon {
@@ -131,6 +142,8 @@
     right: -50px;
     top: 45%;
     outline: none;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
 }
 
 .menu-right-icon {
@@ -138,6 +151,8 @@
     left: -50px;
     top: 45%;
     outline: none;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
 }
 
 .tableOfContent {
@@ -148,9 +163,9 @@
     height: 714px;
     margin: 10px;
     border: solid 3px darkblue;
-    overflow: hidden;    
+    overflow: hidden;
     animation: bounceInLeft 1000ms ease-out 1ms forwards 1, fadeIn 1000ms ease-out 1ms forwards 1;
-    transform: translate(0px, -900px);
+    transform: translate(-500px, 0px);
     @include BoxShadow(6);
 }
 
@@ -163,15 +178,14 @@
     margin: 10px;
     border: solid 3px darkblue;
     overflow: hidden;
-    display: none;
-    animation: fadeIn 1000ms ease-out 1ms forwards 1;
+    animation: fadeIn;
     // transform: translate(0px, 100px);
     @include BoxShadow(6);
 }
 
 .voteIcons {
     position: absolute;
-    left: 130px;
+    left: 120px;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -221,9 +235,7 @@
     animation: heartBeat 10000ms ease-in-out 100ms infinite, fadeOut 10000ms ease-in-out 100ms infinite;
 }
 
-
-.GO {
-    @include BoxShadow(4);
+.GO {   
     width: 70px;
     height: 70px;
     border: 5px solid darkblue;
@@ -231,22 +243,23 @@
     right: 434px;
     bottom: -35px;
     outline: none;
-    font-size: 40px;
-    line-height: 30px;
+    font-size: 45px;
+    line-height: 31px;
     background-color: white;
     color: darkblue;
     font-family: auto;
     z-index: 2;
     animation: heartBeat 10000ms ease-in-out 1ms infinite;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    @include BoxShadow(6);
 }
 
-.GO_Off:hover {   
+.GO_Off:hover {
     transform: scale(1.2);
 }
 
-
 .GO_Off {
-    @include BoxShadow(4);
     width: 70px;
     height: 70px;
     border: 5px solid darkblue;
@@ -254,13 +267,16 @@
     right: 434px;
     bottom: -35px;
     outline: none;
-    font-size: 48px;
+    font-size: 45px;
     line-height: 30px;
     background-color: darkblue;
     color: white;
     font-family: auto;
     z-index: 2;
     transition: all 100ms ease-in-out;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
+    @include BoxShadow(6);
     // animation: heartBeat 10000ms ease-in-out 20ms infinite;
 }
 .G1 {
@@ -390,6 +406,8 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     bottom: 18px;
     font-size: 50px;
     text-align: center;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    box-shadow: inset inset 0px 0px 5px #c1c1c1;
 }
 
 .commentsBox {
@@ -416,11 +434,15 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
         position: absolute;
         bottom: 0px;
         right: 210px;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
     .newNamesLabel {
         position: absolute;
         bottom: 0px;
         left: 210px;
+        text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+        box-shadow: inset inset 0px 0px 5px #c1c1c1;
     }
 }
 
@@ -429,10 +451,9 @@ $voteIconsColor: #008d05, #f2ce00, #f50c0c, #4c00ff, #4c00ff;
     position: absolute;
     left: -2px;
     top: -30px;
-    width: 150px;
+    width: max-content;
     text-align: center;
 }
-
 
 // theme
 
